# nono

./: CHANGELOG.md  README.md
.cargo/: audit.toml
.github/workflows/: image-build.yml  release.yml
bindings/c/: Cargo.toml
crates/nono/: Cargo.toml
crates/nono-cli/: Cargo.toml  README.md
crates/nono-cli/data/: nono-profile.schema.json  policy.json  profile-authoring-guide.md
crates/nono-cli/src/: capability_ext.rs  cli.rs  command_runtime.rs  exec_strategy.rs  execution_runtime.rs  launch_runtime.rs  learn.rs  learn_runtime.rs  main.rs  network_policy.rs  package.rs  package_cmd.rs  policy.rs  policy_cmd.rs  profile_cmd.rs  profile_runtime.rs  pty_proxy.rs  sandbox_prepare.rs  startup_prompt.rs  trust_cmd.rs  trust_scan.rs
crates/nono-cli/src/exec_strategy/: env_sanitization.rs
crates/nono-cli/src/profile/: builtin.rs  mod.rs
crates/nono-cli/tests/: env_vars.rs  manifest_roundtrip.rs  policy_cmd.rs
crates/nono-proxy/: Cargo.toml
crates/nono-proxy/src/: config.rs  credential.rs  error.rs  lib.rs  oauth2.rs  reverse.rs  route.rs  server.rs
crates/nono/src/: capability.rs  manifest.rs  manifest_convert.rs
crates/nono/src/sandbox/: macos.rs
crates/nono/src/trust/: bundle.rs  policy.rs  types.rs
docs/: docs.json
docs/cli/clients/: claude-code.mdx  codex.mdx
docs/cli/features/: credential-injection.mdx  environment.mdx  profile-authoring.mdx  profiles-groups.mdx  trust.mdx
docs/cli/internals/: security-model.mdx
docs/cli/usage/: flags.mdx
scripts/: push-downstream-workflows.sh
scripts/downstream-workflows/: bump-nono-docs.yml  bump-nono-go.yml  bump-nono-py.yml  bump-nono-registry.yml  bump-nono-ts.yml
tests/integration/: test_gpu.sh  test_gpu_ollama.sh
